[B]1.1.6[/B]
- fix thumb scrapping (due to changes in sratim.co.il format)

[B]1.1.5[/B]
- fix plot scrapping (done by vtrh83@gmail.com)

[B]1.1.4[/B]
- fix another movie names issue

[B]1.1.3[/B]
- fix movie names issue after sratim changed format
- support movie names for movies without year

[B]1.1.2[/B]
- support new search results
- fix non-imdb rating

[B]1.1.1[/B]
- support new movie-profile page
- add trailers from hd-trailers.net
- add original title

[B]1.1.0[/B]
- big pile of fixes, should work now after long time!