@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <strings>
     <string id="30000">Enable full cast credits</string>
-    <string id="30001">Enable Trailers from HD-Trailers.net</string>
-    <string id="30002">Enable fanart</string>
-    <string id="30003">Get rating from IMDb</string>
+    <string id="30001">Get Trailers from HD-Trailers.net in </string>
+    <string id="30002">Get fanart from</string>
+    <string id="30003">Get thumb (Movie Poster) from </string>
+    <string id="30004">Get rating from </string>
 </strings>
