@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<strings>
+    <string id="30000">אפשר מידע מלא על שחקנים</string>
+    <string id="30001">הבא קדימונים מHD-Trailers ברזולוציה</string>
+    <string id="30002">הבא פאנארט מ</string>
+    <string id="30003">הבא פוסטר מ</string>
+    <string id="30004">הבא ציון סרט מ</string>
+</strings>
