@@ -1,6 +1,0 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<strings>
-    <string id="30000">Teljes szereposztás engedélyezése</string>
-    <string id="30002">Fanartképek engedélyezése</string>
-    <string id="30003">IMDb besorolás letöltése</string>
-</strings>
