@@ -1,6 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<strings>
-    <string id="30000">전체 출연진 가져오기</string>
-    <string id="30002">팬아트 가져오기</string>
-    <string id="30003">IMDB로 부터 평점 가져오기</string>
-</strings>
