@@ -1,6 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<strings>
-    <string id="30000">Włącz pełną obsadę</string>
-    <string id="30002">Włącz fanarat</string>
-    <string id="30003">Pobieraj ocenę z IMDB</string>
-</strings>
