@@ -1,6 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<strings>
-    <string id="30000">Ligar créditos completos do elenco</string>
-    <string id="30002">Ligar fanart</string>
-    <string id="30003">Obter classificação do IMDb</string>
-</strings>
